aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_lit_mem.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8LitMem(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 8,
                    end: 12,
                },
            ),
        ),
        HexLiteral(
            ByteOffset {
                start: 16,
                end: 18,
            },
        ),
    ),
)
