aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_lit_mem_expr.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8LitMem(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 8,
                        end: 12,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 15,
                        end: 17,
                    },
                ),
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 21,
                end: 23,
            },
        ),
    ),
)
