aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_lit_mem_var.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8LitMem(
        Address(
            Var(
                ByteOffset {
                    start: 8,
                    end: 11,
                },
            ),
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 17,
            },
        ),
    ),
)
