aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_lit_reg.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8LitReg(
        Register(
            ByteOffset {
                start: 5,
                end: 7,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 10,
                end: 12,
            },
        ),
    ),
)
