aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_mem_reg.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8MemReg(
        Register(
            ByteOffset {
                start: 5,
                end: 7,
            },
        ),
        Address(
            HexLiteral(
                ByteOffset {
                    start: 12,
                    end: 16,
                },
            ),
        ),
    ),
)
