aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_reg_mem.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8RegMem(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 8,
                    end: 12,
                },
            ),
        ),
        Register(
            ByteOffset {
                start: 15,
                end: 17,
            },
        ),
    ),
)
