aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov8__tests__mov_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/mov8.rs
expression: result
---
Instruction(
    Mov8RegReg(
        Register(
            ByteOffset {
                start: 5,
                end: 7,
            },
        ),
        Register(
            ByteOffset {
                start: 9,
                end: 11,
            },
        ),
    ),
)
